--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+   "engines": {
+    "node": "6.10.2"
+  },
   "dependencies": {
     "angular": "^1.6.6",
     "angular-ui-router": "^1.0.3",
