--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-ui-router": "^1.0.3",
     "bootstrap": "^3.3.7",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "body-parser": "~1.10.1"
   }
 }
